--- a/README
+++ b/README
@@ -1,13 +1,3 @@
-TODO:
+Bandora is a project that attempts to make it easier to find music on [Bandcamp](http://bandcamp.com). It does this by combining elements of reccomendation radio sites like [Pandora](http://pandora.com) or [Last.fm](http://last.fm). 
 
-DATABASE / SCREEN SCRAPING
-Grab location tags
-Get related tags for each tag, store them in database
-
-WEBAPP
-Get Websockets working
-Get API working
-Serve up a random song
-Serve up a song based on one tag
-Serve up a song based on many tags
-
+The project is currently hosted on my webspace [here](http://csh.rit.edu/~schriver/bandora)
